--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "test": "jest --watch"
+    "test": "jest --watch",
+    "server": "json-server server.json -w -d 750 -p 3333"
   },
   "dependencies": {
+    "date-fns": "^2.21.1",
     "next": "10.0.9",
     "next-images": "^1.7.0",
     "react": "17.0.1",
@@ -38,6 +40,7 @@
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-react": "^7.22.0",
     "jest": "^26.6.3",
+    "json-server": "^0.16.3",
     "prettier": "^2.2.1",
     "ts-jest": "^26.5.4",
     "typescript": "^4.2.3"
