--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "date-fns": "^2.21.1",
     "next": "10.0.9",
     "next-images": "^1.7.0",
+    "rc-slider": "^9.7.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "styled-components": "^5.2.1"
